@@ -105,7 +105,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   page title, etc. 
 * hooks registered with addOnloadHook are now called at the one of the html body
   by all skins.
-
+* Split ajax aided search from core ajax framework. Use wgUseAjax to enable the
+  framework and wgAjaxSearch to enable the suggest feature for the search box.
 
 == Languages updated ==
 
